@@ -3,6 +3,7 @@
 
 * add new updates here without heading until a release
 
+* resize mouse boxes - Frank Thilo
 * choose [un]silence - Michael Hoffman, Tim Riker
 * flag on radar/view on/off - Michael Hoffman, Tim Riker
 * -badword server support - Dave Brosius
